<resources>
    <string name="app_name">Muscle Monsters</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="fitnessera">Fitness Era</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fg">sergreg</string>
    <string name="nes">Fitness Era</string>
    <string name="upper">Upper body Workout</string>
    <string name="chest">Chest</string>
    <string name="tri">Triceps</string>
    <string name="bic">Biceps</string>
    <string name="bac">Back</string>
    <string name="sho">Shoulder</string>
    <string name="leg">Legs</string>
    <string name="abs">Abs</string>
    <string name="hip">Hipps</string>
    <string name="begin">Beginners</string>
    <string name="adv">Advance</string>
    <string name="ab">barbell rear lunge thighs</string>
    <string name="backh">cable pulldown pro lat bar back</string>
    <string name="chestdf">" barbell bench press chest"</string>
    <string name="chessac">" barbell bench press chest"</string>
    <string name="chestache">barbell bench press chest</string>
    <string name="ches12">1) barbell bench press chest</string>
    <string name="absscn">1) barbell rear lunge thighs</string>
    <string name="back324">1) cable pulldown pro lat bar back</string>
    <string name="bicepisdjcbu">1) barbell curl upper arms</string>
    <string name="hip3245">"1) barbell deadlift hips fix "</string>
    <string name="hip234">1) barbell deadlift hips fix</string>
    <string name="legsdckjn">1) barbell rear lunge thighs</string>
    <string name="shoulder">1) barbell standing close grip military press shoulders</string>
    <string name="tridfjibv">1) barbell close grip bench press upper arms</string>
    <string name="appname">Prash Muscles</string>
    <string name="kardiowork">Kardio Work</string>
    <string name="absfrekfo">1) bottoms up m waist</string>
    <string name="Author">Author : Prasad patil</string>
    <string name="vers">Version  : 0.1</string>
    <string name="Autho">Author  : Prasad patil</string>
    <string name="Vesionrtg">Version</string>
    <string name="auth">Author</string>
    <!--    <string name="class">App Class</string>-->
    <!--    <string name="class">App Class</string>-->
    <string name="classrfgvr">App Class</string>
    <string name="mail">Feedback</string>
    <string name="vesujxb">0.1</string>
    <string name="prash564">: Prasad Patil</string>
    <string name="vers3454">: 0.1</string>
    <string name="appclactys6">"Fitness Training "</string>
    <string name="app43534">: Fitness Training</string>
    <string name="mail324">: patilprasad530@gmail.com</string>
    <string name="feed">Send Feedback</string>
    <string name="send">Send</string>
    <string name="spagyscx">" "</string>
    <string name="fitnesscfv">: Fitness Training</string>
    <string name="valid">Valid Reason</string>
    <string name="reas">: Valid Reason</string>
    <string name="maidfc">Patilprasad530@gmail.com</string>
    <string name="mail4354">Patilprasad530@gmailo.com</string>
    <string name="foerarnm">Forearm</string>
    <string name="back_barbell_curl">Back barbell curl</string>
    <string name="gbr">gbrfg</string>
    <string name="ghrtg">ther</string>
    <string name="dfgvf">Start</string>
    <string name="_1_hanging_leg_hip_raise_waist">1) hanging leg hip raise waist</string>
    <string name="workout">WORKOUT</string>
    <string name="_1_band_assisted_pull_up_back">1)band assisted pull up back</string>
    <string name="_1_barbell_bench_press_chest">1) barbell bench press chest</string>
    <string name="_1_assisted_chest_dip_kneeling_chest">1) assisted chest dip kneeling chest</string>
    <string name="_1_dumbbell_close_grip_press_upper_arms">1) dumbbell close grip press upper arms</string>
</resources>