<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BicepsAdvanceActivity">
    <TextView
        android:id="@+id/textnamebiceps29011"
        android:layout_width="409dp"
        android:layout_height="74dp"
        android:fontFamily="@font/new_rocker"
        android:gravity="center"
        android:text="@string/back324"
        android:textColor="#E91E63"
        android:textColorHighlight="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/pic0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/pic0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:src="@drawable/barbell_lying_preacher_curl_upper_arms"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textnamebiceps29011" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/pic1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:src="@drawable/dumbbell_one_arm_prone_curl_upper_arms"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textnamebiceps29011" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pic0">

        <ImageButton
            android:id="@+id/adprev39011"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/begin"
            android:onClick="prev39011"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <Button
            android:id="@+id/button68590"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:onClick="openadvanceBicepsActivity2"
            android:text="ADVANCE" />

        <ImageButton
            android:id="@+id/adnext39011"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/bic"
            android:onClick="next39011"
            app:srcCompat="@android:drawable/ic_media_next" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>